# c

./: README.md  crp.bash
4.0/: crp.bash
4.0/CalifAlumno/: CMakeLists.txt
4.0/EscalarArreglo/: test.c
4.0/EscalarMatriz/: EscalarMatriz.c  a.out
4.0/Factorial_R-I/: CMakeLists.txt
4.0/Factorial_R-I/src/: Factorial_R-I.c
4.0/ManejoDeArchivos/: CMakeLists.txt
4.0/Potencia_R-I/: CMakeLists.txt
Arreglos/PromedioCalif/: PromedioCalif.c  a.out
Estructuras/AreaTriangulo/: AreaTriangulo.dev  Makefile.win  main.c
Estructuras/OrdenarNumerosEnteros/: OrdenarNumerosEnteros.dev  OrdenarNumerosEnteros.layout
Estructuras/PromedioNAlumos/: a.out
Estructuras/TablasDeMultiplicarDoWhile/: Makefile.win  TablasDeMultiplicarDoWhile.dev  main.c
Estructuras/TablasDeMultiplicarFor/: TablasDeMultiplicarFor.dev
Estructuras/TablasDeMultiplicarWhile/: Makefile.win  main.c
Estructuras/TresPromediosNAlumnos/: TresPromediosNAlumnos.layout  main.c
Funciones/MontoNArticulos/: MontoNArticulos.c  a.out
Funciones/MontoNArticulosSubrutinas/: a.out
Funciones/MontoNArticulosSubrutinasValorLocal/: MontoNArticulosSubrutinasValorLocal.c  a.out
Funciones/PromedioCalifSubrutinas/: PromedioCalifSubrutinas  PromedioCalifSubrutinas.c
Funciones/PromedioCalifSubrutinasValorLocal/: PromedioCalifSubrutinas.c  a.out
Proyects/AreaTriangulo/: main.c
Proyects/OrdenarNumerosEnteros/: Makefile.win  main.c
Proyects/PromedioNAlumos/: PromedioNAlumnos.c
Proyects/TablasDeMultiplicarFor/: Makefile.win  (+1 more)
SalarioNEmpleado/: CMakeLists.txt
Sonidos/: CMakeLists.txt
Sonidos/src/: Sonidos.c
(+15 files in other folders)
